# patternMatching

./: CMakeLists.txt  main.cpp  readme.md
data/: price_provider.cpp  price_provider.hpp
namespace/: pattern.hpp  ratio.hpp  trend.hpp
parallel/: pattern_parallel.cpp
pattern/doublebottom/: doublebottom.cpp  doublebottom.hpp
pattern/doublepattern/: doublepattern.cpp  doublepattern.hpp
pattern/doubletop/: doubletop.cpp  doubletop.hpp
pattern/headshoulder/: headshoulder.cpp  headshoulder.hpp
pattern/inverseheadshoulder/: inverseheadshoulder.cpp  inverseheadshoulder.hpp
pattern/utils/: filter.cpp  filter.hpp
type/: patternresult.hpp
worker/: worker.cpp  worker.hpp
